--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-ts-mobx-boilerplate",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "Simple Webpack boilerplate for React + Typescript + MobX + SASS stack",
   "private": true,
   "scripts": {
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
     "autoprefixer": "^9.3.1",
